# libraries

./: .gitignore  README.md  switch_branch
chatwoot-processor/: EXECUTIVE_SUMMARY.md  IMPLEMENTATION_STATUS.md  PHASE3_CHECKLIST.md  README.md  ROADMAP.md  TODO.md  alembic.ini  chatwoot_messages.db  chatwoot_processor.db  pyproject.toml  pytest.ini  test_mock_message_flow.db
chatwoot-processor/alembic/: env.py  script.py.mako
chatwoot-processor/alembic/versions/: 202501171200_phase2_1_comm_schema.py
chatwoot-processor/config/: config_vars.yaml
chatwoot-processor/src/: dependencies.py  env_manager.py  main.py
chatwoot-processor/src/adapters/: __init__.py  base_db_adapter.py  chatwoot_real.py  chatwoot_rest_adapter.py  errors.py  mock_chatwoot_adapter.py  mock_db_adapter.py  sqlite_db_adapter.py
chatwoot-processor/src/db/: base.py  session.py
chatwoot-processor/src/interfaces/: protocols.py
chatwoot-processor/src/models/: _types.py  conversation.py  conversation_state.py  db_message.py  message.py  webhook.py
chatwoot-processor/src/routers/: inbound.py  monitor.py  outbound.py  webhook.py
chatwoot-processor/src/services/: conversation_service.py  conversations.py  message_dispatcher.py
chatwoot-processor/src/workers/: outbound_worker.py
chatwoot-processor/tests/: chat.html  conftest.py  test_conversation_message.py  test_phase2_1_schema.py
chatwoot-processor/tests/adapter_integration/: conftest.py  test_adapters.py
chatwoot-processor/tests/adapters/: test_chatwoot_rest_adapter.py
chatwoot-processor/tests/chatwoot_delivery/: conftest.py  test_live_consume.py  test_live_delivery.py  test_synthetic_consume.py  test_synthetic_delivery.py  utils.py
chatwoot-processor/tests/chatwoot_widget/: test_chatwoot_webhook.py  test_live_sqlite_ingest.py  test_live_webhook.py
chatwoot-processor/tests/manual/: test_send_message.py
chatwoot-processor/tests/mock/: test_message_flow.py
chatwoot-processor/tests/phase2_schema/: test_schema.py
config-manager/: README.md  pyproject.toml
config-manager/tests/: nueva_arquitectura_config_manager.md  test_secrets.py
dev-utils/: README.md  pyproject.toml
dev-utils/scripts/: switch_branch.sh
env-manager/: .gitignore  README.md  README_ES.md  config_vars.yaml.example  pyproject.toml
env-manager/tests/: conftest.py  test_bool_to_string_coercion.py  test_end_to_end.py  test_environment.py  test_environment_integration.py  test_loaders.py  test_manager.py  test_optional_source.py  test_secret_origin_detection.py  test_type_coercion.py  test_validation.py
odoo-api/: ._env  README.md  pyproject.toml  test_sku_6995.py
odoo-api/config/: config_vars.yaml  env_vars.yaml
odoo-api/src/: __init__.py  test.py
odoo-api/tests/: debug_batch_issue.py  debug_variant_batch.py  get_last_mo.py  has_bom.py  has_components.py  migration_test.py  sales.py  stock_movements.py  test_confirm_last_mo.py  test_create_single_production_order.py  test_execute_odoo_query.py  test_product_suppliers.py  test_sales_refactor.py  test_skus_by_name.py  test_skus_by_nameflex.py  test_warehouses_stock.py
odoo-engine/: CLAUDE.md  README.md  pyproject.toml
odoo-engine/config/: config_vars.yaml
odoo-engine/deployment/: .dockerignore  Dockerfile  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.shared-proxy.yml
original/shopify/: pyproject.toml
product-engine/: .gitignore  README.md  pyproject.toml  run_sync_local.sh
product-engine/config/: config_vars.yaml
product-engine/deployment/: .dockerignore  Dockerfile  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.shared-proxy.yml  init-db.sql
product-engine/src/: __init__.py
product-engine/tests/: test_setup.py  test_similarity_filter.py
prompt-assistant/: README.md  pyproject.toml  setup.sh
prompt-assistant/tests/: test_basic.py
sales-engine/: .env.example  .gitignore  MEJORAS_IMPLEMENTADAS.md  README.md  analyze_backtesting_results.py  backtesting_comparison.py  database_migration.sql  generate_all_forecasts.py  load_historical_data.py  pyproject.toml  run_backtesting.py  run_complete_backtesting.py  schema_update.sql
sales-engine/config/: config_vars.yaml
sales-engine/deployment/: Dockerfile  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.shared-proxy.yml
sales-engine/forecaster/: diagnosticar_forecasts.py  load_historical_data.py
sales-engine/tests/: README_BACKTESTING.md  analyze_backtesting_results.py  analyze_january_2025_specific.py  apply_lifecycle_filters.py  backtesting_comparison.py  check_odoo_total_lines.py  conftest.py  fix_discontinued_forecasts.py  improved_forecasting_analyzer.py  investigate_forecast_anomalies.py  investigate_suspicious_data.py  run_backtesting.py  test_analizar_datos_sarima.py  test_analizar_datos_sarima_simple.py  test_backtesting.py  test_backtesting_comparison.py  test_complete_backtesting.py  test_data_structure_validation.py  test_db_client.py  test_db_updater.py  test_enhanced_forecaster.py  test_final_verification.py  test_forecast_reader.py  test_forecast_reader_year.py  test_forecast_single_sku.py  test_forecaster.py  test_improvements.py  test_last_20_sales.py  test_last_20_sales_fixed.py  test_production_calculation.py  test_production_forecast_reader.py  test_production_forecast_reader_module.py  test_prophet_diagnostic.py  test_real_data_extraction.py  test_real_forecasting_demo.py  test_safe_convert.py  test_safe_upsert.py  test_sales_by_month.py  test_sarima_vs_linear.py  test_simple_verification.py  (+4 more)
shopify/: .gitignore  CHANGELOG.md  IMPLEMENTATION_README.md  MULTI_AGENT_SUPPORT.md  README.md  pyproject.toml
shopify/config/: config_vars.yaml
shopify/tests/: example_usage.py  test.py
shopifyMCP/: .gitignore  README.md  pyproject.toml
shopifyMCP/tests/: test_admin_products_integration.py
slack-api/: README.md  check_bot_permissions.py  pyproject.toml  test_reactions.py
slack-api/config/: config_vars.yaml
slack-api/tests/: migration_test.py  slack_message.py
slack_api/: pyproject.toml
update-stock/: pyproject.toml
whatsapp/: README.md  pyproject.toml
(+212 files in other folders)
