[project]
name = "dev-utils"
version = "1.1.0"
description = ""
authors = [
    {name = "bastianibanez",email = "bastian.miba@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic (>=2.11.7,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
