[project]
name = "odoo-api"
version = "1.1.3"
description = ""
authors = [
    {name = "bastianibanez",email = "bastian.miba@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "python-decouple (>=3.8,<4.0)",
    "langchain (>=0.3.25,<0.4.0)",
    "langgraph (>=0.4.5,<0.5.0)",
]

[tool.poetry]
packages = [{include = "odoo_api", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
