[project]
name = "odoo-api"
version = "3.2.0"
description = ""
authors = [{ name = "bastianibanez", email = "bastian.miba@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
  "pandas (>=2.2.3,<3.0.0)",
  "python-decouple (>=3.8,<4.0)",
  "pytz (>=2025.2,<2026.0)",
  "config-manager @ git+https://github.com/NotoriosTI/libraries.git@dev#subdirectory=config-manager",
  "pydantic (>=2.11.7,<3.0.0)",
]

[tool.poetry]
packages = [
  { include = "odoo_api", from = "src" },
  { include = "models", from = "src" },
]

[tool.pyright]
venvpath = "."
venv = ".venv"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
