[project]
name = "odoo-engine"
version = "1.1.1"
description = ""
authors = [{ name = "bastianibanez", email = "bastian.miba@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
  "python-decouple (>=3.8,<4.0)",
  "pytz (>=2025.2,<2026.0)",
  "psycopg2-binary",
  "sqlalchemy (>=2.0)",
  "odoorpc (>=0.10.1,<0.11.0)",
  "pandas (>=2.0,<3.0)",
  "pytest (>=8.4.2,<9.0.0)",
  "openai (>=1.50.2,<2.0.0)",
  "tiktoken (>=0.4.0,<0.9.0)",
  "config-manager @ git+https://github.com/NotoriosTI/libraries.git@dev#subdirectory=config-manager",
  "dev-utils @ git+https://github.com/NotoriosTI/libraries.git@dev#subdirectory=dev-utils",
  "google-cloud-bigquery (>=3.38.0,<4.0.0)",
  "scikit-learn (>=1.7.2,<2.0.0)",
  "db-dtypes (>=1.4.3,<2.0.0)",
]

[tool.poetry]
packages = [{ include = "odoo_engine", from = "src" }]

[project.scripts]
sync = "odoo_engine.sync_manager.main:main"

[tool.pyright]
venvpath = "."
venv = ".venv"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
