[project]
name = "prompt-assistant"
version = "0.2.2"
description = "Agente React para generar prompts de manera estructurada y eficiente"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "langgraph (>=0.5.1,<0.6.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "langchain-core (>=0.3.68,<0.4.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "langchain-openai (>=0.3.27,<0.4.0)",
    "langchain (>=0.3.26,<0.4.0)",
    "slack-api @ git+https://github.com/NotoriosTI/libraries.git@dev#subdirectory=slack-api",
    "config-manager @ git+https://github.com/NotoriosTI/libraries.git@dev#subdirectory=config-manager",
]

[tool.poetry]
packages = [{include = "prompt_assistant", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
