[project]
name = "shopify"
version = "1.2.0"
description = ""
authors = [
    {name = "bastianibanez",email = "bastian.miba@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
    "config-manager @ git+https://github.com/NotoriosTI/libraries.git@feature/chatwoot-processor#subdirectory=config-manager"
]

[tool.poetry]
packages = [{include = "shopify", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
