[project]
name = "shopifyMCP"
version = "0.1.0"
description = "Cliente de infraestructura agnóstico y optimizado para las APIs GraphQL de Shopify (Admin y Storefront)"
authors = [
    {name = "1aravena",email = "vichoaravenas186@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "beautifulsoup4 (>=4.14.3,<5.0.0)",
    "pydantic (>=2.12.5,<3.0.0)"
]

[tool.poetry]
packages = [{include = "shopify", from = "src"}]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
