[project]
name = "slack_api"
version = "0.1.4"
description = ""
authors = [
    {name = "NotoriosTI",email = "ti@notorios.cl"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "slack-sdk (>=3.35.0,<4.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)"
]

[tool.poetry]
packages = [{include = "slack_api", from = "src"}]


[tool.pyright]
venvpath = "."
venv = ".venv"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
