[project]
name = "slack_api"
version = "1.2.0"
description = ""
authors = [
    {name = "NotoriosTI",email = "ti@notorios.cl"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "python-dotenv (>=1.1.0,<2.0.0)",
    "slack-sdk (>=3.35.0,<4.0.0)",
    "slack-bolt (>=1.23.0,<2.0.0)",
    "openai (>=1.91.0,<2.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "config-manager @ git+https://github.com/NotoriosTI/libraries.git@main#subdirectory=config-manager",
]

[tool.poetry]
packages = [{include = "slack_api", from = "src"}]


[tool.pyright]
venvpath = "."
venv = ".venv"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
