[project]
name = "slack_api"
version = "0.1.0"
description = ""
authors = [
    {name = "NotoriosTI",email = "ti@notorios.cl"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
]

[tool.poetry]
packages = [{include = "slack", from = "src"}]


[tool.pyright]
venvpath = "."
venv = ".venv"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
