[project]
name = "update-stock"
version = "0.1.0"
description = ""
authors = [
    {name = "1aravena",email = "vichoaravenas186@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "env-manager @ git+https://github.com/NotoriosTI/libraries.git@feature/auto-update-stock-odoo-shopify#subdirectory=env-manager",
]

[tool.poetry]
packages = [{include = "update_stock", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
